fixed wrapping on custom-select

--- a/sitecode/scss/main.scss
+++ b/sitecode/scss/main.scss
@@ -824,6 +824,7 @@ body {
             > div:first-child {
                 flex: 1 1 auto;
                 padding-right: .5em;
+                white-space: nowrap;
             }
             > div.arrow {
                 flex: 0 1 auto;
